# alkaid

./: .gitignore  .npmrc  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  vite.config.ts
.do/: app.yaml
agent/: system_prompt.md
agent/knowledge/: 36_stratagems.md  alkaid_mechanics.md  alkaid_unit_guide.csv  art_of_war.md  historical_battles.md
ai-training/: pyproject.toml
ai-training/bots/: balanced_bot.py  base_bot.py  defensive_bot.py  flanker_bot.py  rush_bot.py
ai-training/env/: alkaid_env.py  combat.py  command.py  environment.py  experience.py  fatigue.py  game.py  morale.py  obs_builder.py  pathfinding.py  random.py  reward.py  spatial_hash.py  supply.py  surrender.py  terrain.py  types.py
ai-training/evaluation/: benchmark.py
ai-training/parity/: test_parity.py
ai-training/tests/: test_attention_policy.py  test_bots.py  test_combat.py  test_constants.py  test_env.py  test_game.py  test_morale.py  test_random.py  test_self_play.py  test_spatial_hash.py  test_supply.py  test_terrain.py  test_types.py
ai-training/training/: attention_policy.py  callbacks.py  config.py  curriculum.py  export_onnx.py  quantize.py  self_play.py  train.py
backend/: .env.example  Dockerfile  main.py  requirements.txt
backend/routes/: agent.py  simulation.py  training.py
backend/services/: agent_client.py  (+2 more)
dashboard/: index.html
n8n/: README.md  audio-workflow.json  image-workflow.json
scripts/: generate-sprites.ts
shared/: constants.json  load_constants.py
src/: constants.ts  main.ts
(+220 files in other folders)
